# rust_final_project

./: .gitignore  Cargo.toml  README.md  chat_server.py  index.html
examples/: hello-redis.rs
scripts/: start_tunnels.sh
scripts/k6/: test.js
src/: lib.rs  people.rs
